# bw-hackathon-data

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
bw_hackathon_data/: __init__.py  align.py  build.py  calibrate.py  config.py  entsoe.py  gfs.py  isd.py  release.py
scripts/: build_all.py  calibrate.py  fetch_entsoe.py  fetch_gfs.py  fetch_isd.py  install_endpoint_state.py  release.py
tests/: conftest.py  test_align.py  test_build.py  test_calibrate.py  test_entsoe.py  test_gfs.py  test_isd.py
