[project]
name = "bw-hackathon-data"
version = "0.1.0"
description = "Real public-data pipeline for the BW hackathon."
requires-python = ">=3.11"
dependencies = [
    "entsoe-py>=0.5.10",
    "herbie-data>=2024.5.0",
    "xarray>=2024.2",
    "cfgrib>=0.9.10",
    "polars>=1.0",
    "pyarrow>=15",
    "lightgbm>=4",
    "httpx>=0.27",
    "python-dotenv>=1",
    "numpy>=1.26",
    "pandas>=2",
    "scikit-learn>=1.8.0",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pyright>=1.1.350",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bw_hackathon_data"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = ["I", "N", "UP", "B"]

[tool.pyright]
include = ["bw_hackathon_data", "scripts", "tests"]
typeCheckingMode = "basic"
pythonVersion = "3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
markers = [
    "integration: hits the network; skipped unless BW_DATA_NETWORK=1",
]
